--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
-
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <title> Games </title>
+    </head>
+        <body>
+            <h1>Найкращі ігри на ПК + ексклюзивний Топ 10 очікуваних ігор 2023 року</h1>
+                <p>Якщо раніше гравці хотіли якомога більше екшену, перестрілок та вибухів, тепер тяжіють до продуманих сюжетних ігор. Також не думають здавати позиції ті ігри, що розраховані на багато користувачів у рейтингу ігор на ПК.</p>
+                <p>Зібрали ТОП ігор для ПК, що досі у тренді. І проанонсуємо ті, що вже очікуються протягом року.</p>
+            <h2>Найкращі ігри на ПК, в які можна пограти вже сьогодні</h2>
+                <p>Кожне десятиліття має свої вічні історії. Перед вами 10 найкращих, перегляньте, згадайте, увімкніть ностальгію.</p>
+                <p>Продумуй кожен крок: Найкращі стратегії на ПК — розберемо 10 найактуальніших продуктів 2023 року.</p>
+            <h3>The Witcher 3: Wild Hunt</h3>
+                <p>Три причини чому слід звернути увагу на гру:</p>
+            <ul>
+                <li>Величезний ігровий світ — немає «порожніх місць» заради галочки.</li>
+                <li>Гра «провокує» вивчати кожен куточок — потім там з'являються корисні персонажі, торговці антикваріатом, герой отримує додаткові «бали талантів».</li>
+                <li>Перевірена часом гра з регулярним виходом доповнень.</li>
+            </ul>
+                    <img src="https://img.moyo.ua/img/news_desc/1665/166512_1686920734_0.jpg"/>
+                <p>Студія з розробки ігор CD Projekt Red завжди славилися добротними іграми. А серія «Відьмак» буквально стала візитівкою польської студії. І «Witcher 3: Wild Hunt» — це та гра, де смакуєш кожну секунду проходження, тому що тут можна взаємодіяти практично з кожним об'єктом. Прямо як у реальному світі!</p>
+                <p>Перша локація «Білий Сад» невелика — проходиться швидко, квестів не так вже й багато. Зате потім перед гравцем відкривається величезний середньовічний ігровий світ: тут є ліс та пагорби, річки та засніжені вершини. І все це з полчищами магічних чудовиськ, мародерами, десятками обжитих та занедбаних сіл та кількох великих міст.</p>
+                <p>Головне при проходженні — не розпорошуватися на додаткові завдання. Тут буквально за кожним поворотом Геральта (головний герой) чекають нові завдання та можливості. І тільки гравець вирішує, чи готовий Відьмак (герой) прийняти їх чи йому краще виконувати «основні» завдання. Проте, любителі сайд-квестів (завдань, що не стосуються основної сюжетної лінії) повинні враховувати, що після повного проходження сюжету вони не отримають додаткових доручень.</p>
+                <p>Іноді рішення у другорядних квестах впливатимуть на сюжет і на ігровий світ загалом. Наприклад, якщо Геральт розлютить жителів села, вони можуть влаштувати «полювання на відьом», не даючи герою потрапити туди повторно.</p>
+            <h3>Grand Theft Auto V</h3>
+                <p>Три аспекти цінності гри:</p>
+            <ul>
+                <li>Ігрова класика, що постійно оновлюється.</li>
+                <li>Відкритий світ — кожну секунду тут відбуваються тисячі дій незалежно від гравця.</li>
+                <li>Можливість отримати відразу кілька симуляторів в одній грі: вид від «першої особи» в авто замінить симулятор водіння, при рукопашній можна відчути себе бійцем, а при стрільбі відчувається реалістичність шутера.</li>
+            </ul>
+                    <img src="https://img.moyo.ua/img/news_desc/1665/166512_1686920734_1.jpg"/>
+                <p>GTA 5 — найпопулярніша гра Rockstar, що побила майже всі рекорди ігрової індустрії. Історія «засмоктує» настільки, що в ній можна провести день, не помітивши, як він закінчився. Весь ігровий світ відкритий одразу — не треба чекати, доки стане доступним якийсь район. Можна сісти в авто та вивчити всю карту за раз.</p>
+                <p>У сюжетній частині три головних героїв: Майкл та Тревор — запеклі бандити, темношкірий Франклін тільки став на «слизьку доріжку» кримінального світу. У кожному з них своя надзвичайна здібність:</p>
+            <ul>
+                <li>Франклін вміє уповільнювати час в авто.</li>
+                <li>Тревор в люті завдає подвійної шкоди.</li>
+                <li>Майкл уповільнює час при стрільбі.</li>
+            </ul>
+                <p>У деяких місіях доведеться перемикатися між героями. Вони йтимуть на завдання разом. Поки один грабуватиме, другий — стоятиме «напоготові», охороняючи партнера, третій колеситиме по окрузі, виглядаючи правоохоронців.</p>
+                <p>Одну й ту саму місію можна пройти по-різному: кидатися гранатами «в лоб», або продумувати багатоходівки. Особливо добре це застосовувати в онлайн-версії. Там варіативність підходів до одного завдання максимальна. Транспорт та зброя освоюються швидко, через кілька хвилин гравець повністю опановує їх.</p>
+            <h3>Red Dead Redemption 2</h3>
+                <p>Гра чіпляє, тому що це «дітище» Rockstar з атмосферою «Дикого Заходу». Як і в GTA V, тут гарний сюжет та потужний мультиплеєр. Можна полювати на поганців, грабувати багатих на благо бідних і тікати від шерифів.</p>
+                    <img src="https://img.moyo.ua/img/news_desc/1665/166512_1686920734_2.jpg">
+                <p>Red Dead поєднує у собі відкритий світ, сотні активностей, детально осмислений сюжет та сотні сторонніх місій. Саме тому гра в топ 10 найкращих ігор XXI століття. Щоб переконатися, варто посидіти з годинку в RDR 2.</p>
+            <h3>Resident Evil 2: Remake</h3>
+                <p>Дві особливості гри чіпляють за душу:</p>
+            <ul>
+                <li>Це повільний хорор, за яким скучили геймери. Жанр survival-horror перетворився на швидкий шутер, а гравцям подобаються історії з атмосферою, що нагнітає.</li>
+                <li>Відразу доступні всі режими складності — від легкого до максимального.</li>
+            </ul>
+                    <img src="https://img.moyo.ua/img/news_desc/1665/166512_1686920735_3.jpg">
+                <p>Оновлена ​​версія однієї з найкультовіших ігор сучасності порадує фанатів серії реалістичною графікою, зручним керуванням та надзвичайними здібностями героїв. Тут, як і в оригіналі, доведеться багато думати. Переміщення по локаціях без екранів завантаження: не потрібно сидіти та чекати завантаження місцевості.</p>
+                <p>Автоматичний приціл залишився лише на легкій складності: в інших рівнях доведеться цілитися по монстрах самому. Також зомбі стали сильніше хитатися з боку на бік. При цьому від пострілу може «прокинутися» навіть та нежить, яка вже лежала на підлозі. Єдиний спосіб бути впевненим, що ходячий не нападе — розбити йому черепну коробку. У решті випадків гравця можуть очікувати неприємні сюрпризи.</p>
+            <h3>Half-Life: Alyx</h3>
+                <p>Фішки гри полягають у трьох моментах:</p>
+            <ul>
+                <li>Це VR-гра: за допомогою контролерів можна взаємодіяти із предметами всередині гри. Також геймеру доведеться рухатися у реальному житті.</li>
+                <li>Зручна система телепортів — гравцеві не доведеться бігати по кімнаті, достатньо зробити кілька кроків туди-назад.</li>
+                <li>Головний ігровий персонаж активно заговорив. Можна дізнатися про думки героя. Діалоги звучать правдоподібно, оскільки протагоніст не боїться сперечатися з усіма поспіль.</li>
+            </ul>
+                    <img src="https://img.moyo.ua/img/news_desc/1665/166512_1686920735_4.jpg">
+                <p>Події цієї частини гри стартують за 5 років до подій HL:2. Юна Алекс Венс ще не зустріла Гордона Фрімена, проте вже бореться проти зла. В одній із таких битв противники беруть у полон її батька. Дівчині вже доводиться брати до рук гармати, потужні граві-рукавички та йти справлятися з монстрами.</p>
+                <p>Розробники могли б наставити лячних скримерів (і у віртуальній реальності це справляло б враження), проте вони зробили розумніше — події гри поступово нагнітають страх. І тільки після того, як його перебороти, герой та гравець зможуть перемогти сили зла.</p>
+                <p>Доводиться думати, куди саме класти інвентар — якщо в ліву рукавичку, то дотягнутися до неї правою рукою складно. У грі немає «нескінченних кишень», тому доведеться регулярно викладати зайве. Краще запам'ятати місця із залишеним інвентарем — повертатися до них доведеться часто.</p>
+            <h3>Mass Effect 2</h3>
+                <p>Гра гідна уваги з двох причин:</p>
+            <ul>
+                <li>Дрібні рішення у сторонніх квестах впливають на сюжет. Потрібно думати над кожним своїм рішенням.</li>
+                <li>Це довга, проте забируща гра. Навіть якщо пропустити другорядні завдання та кат-сцени (внутрішньоігрові відео без геймплею), все одно вийде 40-50 годин ігрового досвіду.</li>
+            </ul>
+                    <img src="https://img.moyo.ua/img/news_desc/1665/166512_1686920736_5.jpg">
+                <p>Попри солідний вік гри, вона все ще популярна — добротна графіка, управління звичне та зрозуміле. Можна грати джойстиком на клавіатурі в тандемі з мишкою.</p>
+                <p>Гра відбувається в далекому майбутньому, де гравцеві потрібно боротися з організацією «Цербер» та захистити всесвіт від повернення Женців (особливо небезпечна цивілізація, що знищила всі цивілізації Чумацького Шляху за 50 тисяч років до старту сюжету).</p>
+                <p>Гру можна проходити по кілька разів. Кожен ігровий досвід відрізнятиметься. У гравців, що прагнуть проходити гру за правилами моралі (без вбивств та підступів), є шанс заговорити противників і пройти гру з найменшими втратами. Шанувальники жорстокого поводження з ворогами повинні постійно ухилятися від куль супротивника.</p>
+                <p>Залежно від стилю проходження може змінюватися жанр гри: любителі сторонніх місій перетворять ME2 на продуману рольову гру, де потрібно замислюватися над кожною дією. Якщо ж грати тільки в головну сюжетну арку, гра стане швидким шутером.</p>
+            <h3>Horizon Zero Dawn</h3>
+                <p>Особливості гри полягають у наступному:</p>
+            <ul>
+                <li>Величезний ігровий світ, що поділений на кліматичні зони: від пустелі до помірного та зледенілого клімату. Гравець повинен підлаштовуватися під погоду та тварин.</li>
+                <li>Щоб отримати потужну зброю, гравцеві доведеться попітніти: зайти в магазин та купити необхідне екіпірування не вдасться. Доведеться заздалегідь прораховувати, скільки потрібно зробити зброї різного типу.</li>
+                <li>При боротьбі з роботами важлива тактика та навички гравця. За правильного підходу перемогти потужного монстра можна навіть зі слабким інвентарем.</li>
+            </ul>        
+                    <img src="https://img.moyo.ua/img/news_desc/1665/166512_1686920736_6.jpg">
+                <p>Світ Horizon Zero Dawn — вінегрет з подій та технологій. І хоч у самій грі приблизно 3000 рік, тут доісторичні мисливці зі списами бігають за броньованими 5-метровими роботами. А ці роботи, своєю чергою, стріляють убивчими лазерами. Ось такий антиутопічний світ, де перемогли машини.</p>
+                <p>Історія вражає масштабами. Такий величезний ігровий світ та кількість унікальних героїв рідко де зустрінеш. Зазвичай неігрових персонажів роблять близнюками одне одного — задля економії простору на диску. Проте це псує враження від гри, бо персонажі, що постійно дублюються, розбивають ілюзію природності. Тут же навіть NPC відрізняються один від одного — з більшістю з них можна поспілкуватися, вони дадуть інвентар.</p>
+                <p>Головна героїня Елой — жіноча версія Бетмена та Залізної Людини у дивному майбутньому. Усі основні «надздібності» їй надає вміння поводитися з технікою. Саме тому вона вміє бачити вразливі місця машин, обчислює пересування «електронних звірів», зчитує інформацію з машин, зроблених у XX-XXII столітті. Дія історії відбувається приблизно в 3000 році, тому наші часи для ігрових героїв здаються далеким минулим.</p>
+            <h3>Battlefield 3</h3>
+                <p>Тайтл цінний завдяки трьом моментам:</p>
+            <ul>
+                <li>Пропрацьований сюжет та можливість багатокористувацької гри.</li>
+                <li>Красива графіка, що виглядає сучасно навіть через роки з моменту прем'єри.</li>
+                <li>Реалістичність битв.</li>
+            </ul>
+                    <img src="https://img.moyo.ua/img/news_desc/1665/166512_1686920736_7.jpg">
+                <p>Ставка зроблена саме на реалістичність битв. Складається враження, що розробники надають гравцям кіно в жанрі мок'юментарі — псевдодокументальне фільмування, де герої знають, що їх знімають і не бояться дуркувати. Проте нехай жарти компаньйонів не розслаблюють — противники тут злі й убивають на раз-два.</p>
+                <p>Усі ігрові епізоди пов'язані єдиним сюжетом. Головний герой сержант Генрі Блекберн на допиті згадує нещодавні воєнні події. І гравець стає частиною цих подій, борючись з ворогами на Близькому Сході, Парижі та Нью-Йорку.</p>
+                <p>Єдина прикрість — не пропрацьовані чекпоїнти (місця збереження — якщо героя вб'ють, він повертається не на початок рівня, а до цього місця). Контрольні точки розставлені далеко один від одного, через що не завжди вдається зберегтися у потрібний момент. Складні завдання іноді доводиться проходити замість 15 хвилин протягом години.</p>
+                <h3>The Elder Scrolls 5: Skyrim</h3>
+                <p>Грати варто, і ось чому:</p>
+            <ul>
+                <li>Продумана бойова система дозволяє налаштувати фішки героя повністю під себе.</li>
+                <li>Можна заходити в будинки до людей, спілкуватися та отримувати квести від неігрових персонажів.</li>
+                <li>Якщо гравець знайде потрібну за сюжетом реліквію чи артефакт, система трохи змінить фабулу гри.</li>
+            </ul>
+                    <img src="https://img.moyo.ua/img/news_desc/1665/166512_1686920737_8.jpg">
+                <p>Elder Scrolls 5 є головною грою десятиліття про середньовіччя. Сюжет ломиться від насиченості подій усередині ігрового світу. Тут десятки квестів, цікаві персонажі та гарна природа.</p>
+                <p>Зброя та заклинання призначаються на обидві руки, а це означає, що потужні удари можна тасувати у будь-якій послідовності та розправлятися з ворогами зручним способом. Головне, продумати стратегію захисту та нападу. Ну і мати ігрову клавіатуру зі швидкою віддачею, щоб команди передавалися без затримок.</p>
+                <p>Краще комбінувати можливості, адже в одному стелс-режимі (тихо та крадькома) проходження може виявитися складним та нудним. Але якщо поєднати його із середньовічним шутером стрілами, стає динамічнішим і веселішим!</p>
+            <h3>Assassin's Creed 2</h3>
+                <p>У чому особливість:</p>
+            <ul>
+                <li>У грі багато історичних особистостей — Леонардо да Вінчі, Нікколо Макіавеллі та інші.</li>
+                <li>Зручна бойова система: багато зброї доступно для двох рук одночасно, а управління стало простішим, ніж у першій частині.</li>
+                    <img src="https://img.moyo.ua/img/news_desc/1665/166512_1686920737_9.jpg">
+                <p>Дія гри відбувається у середньовічній Італії. Юний флорентієць Еціо Борджіа веде розгульне життя золотої молоді, яке доводиться перервати через загрозу життю батька та рідних братів. Їх раптово хапають за хибним звинуваченням у масовій змові й страчують на центральній площі. Наступним може бути головний герой.</p>
+                <p>Мета гравця — з'ясувати, хто ж винен у такій сумній долі його родини. Щоб розуміти масштаби ситуації, підкажемо, що у фіналі гравець дійде до Ватикану і досягне аудієнції Папи Римського.</p>
+            </ul>
+        </body>
+</html>
